# snip_man

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: init.rs  main.rs  os.rs  shell.rs  snippets.rs  tui.rs
