[package]
name = "snip_man"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.47", features = ["derive"] }
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
