[package]
license = "MIT"
name = "snipman"
version = "0.1.1"
edition = "2024"
authors = ["Arshia <arshiarezagholi1212@gmail.com>"]
description = "A fast and simple TUI-based code snippet manager."
homepage = "https://github.com/arshia-rgh/snipman"
repository = "https://github.com/arshia-rgh/snipman"
readme = "README.md"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.47", features = ["derive"] }
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
